--- a/reval.org
+++ b/reval.org
@@ -1,3 +1,4 @@
+# -*- orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; orgstrap-block-checksum: fb8352bcba83b3cc06916b3e456c930ee2e9a790fd575f1c7552e004d823560b; -*-
 #+title: Reval: Evaluate remote elisp code
 
 * Introduction
@@ -131,7 +132,7 @@ review.
 
 ;;; Commentary:
 
-;; reval.el implements eval of remote elisp code. More accurately
+;; reval.el implements eval of remote elisp code.  More accurately
 ;; it implements local evaluation of remote elisp in a way that is
 ;; somewhat secure.
 
@@ -218,10 +219,18 @@ reduced complexity everywhere else.
 *** maximal
 #+name: reval-impl
 #+begin_src elisp :lexical yes :results none
+(require 'cl-lib)
+
+(defgroup reval nil
+  "Minimal remote evaluation of elisp code."
+  :tag "reval"
+  :group 'applications)
+
 (defcustom reval-default-cypher 'sha256
   "Default cypher to use to fill in a hole in `reval'."
   :type 'symbol
-  :options (secure-hash-algorithms))
+  :options (secure-hash-algorithms)
+  :group 'reval)
 
 (defvar reval-cache-directory (concat user-emacs-directory "reval/cache/")
   "The directory where retrieved .el files are saved.")
@@ -266,7 +275,7 @@ is ok before continuing."
             (switch-to-buffer (current-buffer))
             ;; FIXME `yes-or-no-p' still blocks the command loop in >= 27 emacsclient
             (unless (yes-or-no-p "Audit of file ok? ") ; not using `y-or-n-p' since it is too easy
-              (error "Audit failed. Checksum will not be calculated for %s"
+              (error "Audit failed.  Checksum will not be calculated for %s"
                      (buffer-file-name (current-buffer)))))
 
           ;; need to ensure that file is actually elisp
@@ -277,14 +286,14 @@ is ok before continuing."
 
           ;; elisp check by major mode
           (unless (eq major-mode 'emacs-lisp-mode)
-            (error "Not an emacs lisp file!"))
+            (error "Not an Emacs Lisp file!"))
 
           ;; elisp check by read
           (condition-case nil
               (read (concat "(progn\n"
                             (buffer-substring-no-properties (point-min) (point-max))
                             "\n)"))
-            (error (error "Not an emacs lisp file!")))
+            (error (error "Not an Emacs Lisp file!")))
 
           ;; return the checksum
           (intern (secure-hash cypher (current-buffer))))))))
@@ -296,7 +305,7 @@ is ok before continuing."
 
 (defalias 'reval-resum #'reval-resum-review)
 
-(defvar reval--make-audit t "Dynamic variable to control audit during `reval--make'")
+(defvar reval--make-audit t "Dynamic variable to control audit during `reval--make'.")
 ;; the control of audit behavior is intentionally excluded from the
 ;; arguments of `reval--make' so that top level calls must audit
 (defun reval--make (cypher path-or-url)
@@ -339,7 +348,10 @@ for a better workflow."
                 nil t))))
 
 (defun reval-cache-path (checksum &optional basename)
-  "Return the path to the local cache for a given checksum."
+  "Return the path to the local cache for a given CHECKSUM.
+If BASENAME is provided a wildcard is not used.  This is mostly
+to make the calls more human readable for debugging but also
+makes it easier to catch cases where the wrong checksum was passed."
   (let* ((name (symbol-name checksum))
          (subdir (substring name 0 2))
          (cache-path (concat reval-cache-directory subdir "/" name "-" (or basename "*"))))
@@ -353,7 +365,7 @@ for a better workflow."
           nil)))))
 
 (defun reval--write-cache (buffer cache-path)
-  "Write BUFFER to CACHE-PATH. Create the parent if it doesn not exist."
+  "Write BUFFER to CACHE-PATH.  Create the parent if it doesn not exist."
   (let ((parent-path (file-name-directory cache-path))
         make-backup-files)
     (unless (file-directory-p parent-path)
@@ -362,6 +374,8 @@ for a better workflow."
       (write-file cache-path))))
 
 (defun reval-find-cache (&optional universal-argument)
+  "Jump to the cache for a given reval call.
+At the moment UNIVERSAL-ARGUMENT is a placeholder."
   (interactive)
   (cl-multiple-value-bind (_cypher checksum path-or-url _alternates _b _e)
       (reval--form-at-point)
@@ -378,8 +392,9 @@ If an error is encountered try ALTERNATES in order.
 
 The simplest way to populate a `reval' expression starting from just
 PATH-OR-URL is to write out expression with CYPHER and CHECKSUM as a
-nonsense values. For example (reval ? ? \"path/to/file.el\"). Then run
-M-x `reval-update-simple' to populate CYPHER and CHECKSUM."
+nonsense values.  For example (reval ? ? \"path/to/file.el\").  Then
+run \\[reval-update-simple] (M-x `reval-update-simple') to populate
+CYPHER and CHECKSUM."
   (let (done
         (cache-path (reval-cache-path checksum (file-name-nondirectory path-or-url))))
     (with-url-handler-mode
@@ -424,12 +439,13 @@ M-x `reval-update-simple' to populate CYPHER and CHECKSUM."
 
 (defvar url-http-end-of-headers)
 (defun reval-url->json (url)  ; see utils.el
-  "given a url string return json as a hash table"
+  "Given a URL string return json as a hash table."
   (json-parse-string
    (with-current-buffer (url-retrieve-synchronously url)
      (buffer-substring url-http-end-of-headers (point-max)))))
 
 (defun reval--get-new-immutable-url ()
+  "Get the immutable url for the current buffer."
   (let ((get-imm-name (reval-header-get-immutable)))
     (if get-imm-name
         (let ((get-imm (intern get-imm-name)))
@@ -441,6 +457,7 @@ M-x `reval-update-simple' to populate CYPHER and CHECKSUM."
       nil)))
 
 (defun reval-get-imm-github (group repo path &optional branch)
+  "Get the immutable url for PATH on BRANCH in a github remote for REPO at GROUP."
   (let* ((branch (or branch "master"))
          (url (format "https://api.github.com/repos/%s/%s/git/refs/heads/%s" group repo branch))
          (sha (gethash "sha" (gethash "object" (reval-url->json url)))))
@@ -455,7 +472,7 @@ M-x `reval-update-simple' to populate CYPHER and CHECKSUM."
     (lm-header "is-version-of")))
 
 (defun reval-header-get-immutable (&optional file)
-  "Return the Reval-Get-Immutable: header for File or current buffer.
+  "Return the Reval-Get-Immutable: header for FILE or current buffer.
 
 The value of this header should name a function in the current
 file that returns an immutable name that points to the current
@@ -490,7 +507,7 @@ package is present on the system."
   )
 
 (defun reval--dquote-symbolp (thing)
-  "Matches pattern ''THING.
+  "Match pattern ''THING.
 Useful when dealing with quoted symbols in the outpub or a `read'.
 For example elt 2 of '(reval 'sha256 ? \"file.el\")."
   (and (consp thing)
@@ -499,6 +516,7 @@ For example elt 2 of '(reval 'sha256 ? \"file.el\")."
        (symbolp (cadr thing))))
 
 (defun reval--form-at-point ()
+  "Extract the components of the reval expression at the current point."
   (save-excursion
     (re-search-forward " ")
     (re-search-backward "(reval[[:space:]]")
@@ -517,6 +535,7 @@ For example elt 2 of '(reval 'sha256 ? \"file.el\")."
           (cl-values cypher checksum path-or-url alternates begin end))))))
 
 (defun reval-checksum-at-point (&optional universal-argument)
+  "Get the checksum in the reval form at point.  UNIVERSAL-ARGUMENT is a placeholder."
   (interactive)
   (cl-multiple-value-bind (_cypher checksum _path-or-url _alternates _b _e)
       (reval--form-at-point)
